Fixed a right-aligned version button for the web.

--- a/src/main/webapp/less/main.less
+++ b/src/main/webapp/less/main.less
@@ -222,6 +222,11 @@ body {
   footer {
     .footer(@theme-headerfooter-text-color; @theme-headerfooter-background-color; @theme-headerfooter-border-color);
   }
+
+  .modal-content {
+    color: @theme-headerfooter-background-color;
+    background-color: @theme-headerfooter-hover-color;
+  }
 }
 
 .sylvan {
